libs/FunMarParser.cpp

// Generated from FunMar.g4 by ANTLR 4.13.2


#include "FunMarVisitor.h"

#include "FunMarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FunMarParserStaticData final {
  FunMarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FunMarParserStaticData(const FunMarParserStaticData&) = delete;
  FunMarParserStaticData(FunMarParserStaticData&&) = delete;
  FunMarParserStaticData& operator=(const FunMarParserStaticData&) = delete;
  FunMarParserStaticData& operator=(FunMarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag funmarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<FunMarParserStaticData> funmarParserStaticData = nullptr;

void funmarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (funmarParserStaticData != nullptr) {
    return;
  }
#else
  assert(funmarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<FunMarParserStaticData>(
    std::vector<std::string>{
      "prog", "func", "expStmt", "stmt", "funMarRule", "terminalRule", "schm", 
      "sbwordi", "sbwordo", "abst", "funcAbst"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'->'", "'=>'", "'scheme'", "'('", "')'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "LET", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  funmarParserStaticData = std::move(staticData);
}

}

FunMarParser::FunMarParser(TokenStream *input) : FunMarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FunMarParser::FunMarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  FunMarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *funmarParserStaticData->atn, funmarParserStaticData->decisionToDFA, funmarParserStaticData->sharedContextCache, options);
}

FunMarParser::~FunMarParser() {
  delete _interpreter;
}

const atn::ATN& FunMarParser::getATN() const {
  return *funmarParserStaticData->atn;
}

std::string FunMarParser::getGrammarFileName() const {
  return "FunMar.g4";
}

const std::vector<std::string>& FunMarParser::getRuleNames() const {
  return funmarParserStaticData->ruleNames;
}

const dfa::Vocabulary& FunMarParser::getVocabulary() const {
  return funmarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FunMarParser::getSerializedATN() const {
  return funmarParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

FunMarParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FunMarParser::ProgContext::EOF() {
  return getToken(FunMarParser::EOF, 0);
}

std::vector<FunMarParser::FuncContext *> FunMarParser::ProgContext::func() {
  return getRuleContexts<FunMarParser::FuncContext>();
}

FunMarParser::FuncContext* FunMarParser::ProgContext::func(size_t i) {
  return getRuleContext<FunMarParser::FuncContext>(i);
}


size_t FunMarParser::ProgContext::getRuleIndex() const {
  return FunMarParser::RuleProg;
}


std::any FunMarParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::ProgContext* FunMarParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, FunMarParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(23); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(22);
      func();
      setState(25); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FunMarParser::ID);
    setState(27);
    match(FunMarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

FunMarParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FunMarParser::FuncContext::ID() {
  return getToken(FunMarParser::ID, 0);
}

std::vector<FunMarParser::ExpStmtContext *> FunMarParser::FuncContext::expStmt() {
  return getRuleContexts<FunMarParser::ExpStmtContext>();
}

FunMarParser::ExpStmtContext* FunMarParser::FuncContext::expStmt(size_t i) {
  return getRuleContext<FunMarParser::ExpStmtContext>(i);
}


size_t FunMarParser::FuncContext::getRuleIndex() const {
  return FunMarParser::RuleFunc;
}


std::any FunMarParser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::FuncContext* FunMarParser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 2, FunMarParser::RuleFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    match(FunMarParser::ID);
    setState(30);
    match(FunMarParser::T__0);
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1648) != 0)) {
      setState(31);
      expStmt();
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(37);
    match(FunMarParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpStmtContext ------------------------------------------------------------------

FunMarParser::ExpStmtContext::ExpStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FunMarParser::StmtContext* FunMarParser::ExpStmtContext::stmt() {
  return getRuleContext<FunMarParser::StmtContext>(0);
}

FunMarParser::SchmContext* FunMarParser::ExpStmtContext::schm() {
  return getRuleContext<FunMarParser::SchmContext>(0);
}


size_t FunMarParser::ExpStmtContext::getRuleIndex() const {
  return FunMarParser::RuleExpStmt;
}


std::any FunMarParser::ExpStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitExpStmt(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::ExpStmtContext* FunMarParser::expStmt() {
  ExpStmtContext *_localctx = _tracker.createInstance<ExpStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, FunMarParser::RuleExpStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(43);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FunMarParser::T__3:
      case FunMarParser::T__4:
      case FunMarParser::LET:
      case FunMarParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(39);
        stmt();
        setState(40);
        match(FunMarParser::T__2);
        break;
      }

      case FunMarParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(42);
        schm();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

FunMarParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FunMarParser::FunMarRuleContext* FunMarParser::StmtContext::funMarRule() {
  return getRuleContext<FunMarParser::FunMarRuleContext>(0);
}

FunMarParser::TerminalRuleContext* FunMarParser::StmtContext::terminalRule() {
  return getRuleContext<FunMarParser::TerminalRuleContext>(0);
}


size_t FunMarParser::StmtContext::getRuleIndex() const {
  return FunMarParser::RuleStmt;
}


std::any FunMarParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::StmtContext* FunMarParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, FunMarParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(45);
      funMarRule();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(46);
      terminalRule();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunMarRuleContext ------------------------------------------------------------------

FunMarParser::FunMarRuleContext::FunMarRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FunMarParser::SbwordiContext* FunMarParser::FunMarRuleContext::sbwordi() {
  return getRuleContext<FunMarParser::SbwordiContext>(0);
}

FunMarParser::SbwordoContext* FunMarParser::FunMarRuleContext::sbwordo() {
  return getRuleContext<FunMarParser::SbwordoContext>(0);
}


size_t FunMarParser::FunMarRuleContext::getRuleIndex() const {
  return FunMarParser::RuleFunMarRule;
}


std::any FunMarParser::FunMarRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitFunMarRule(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::FunMarRuleContext* FunMarParser::funMarRule() {
  FunMarRuleContext *_localctx = _tracker.createInstance<FunMarRuleContext>(_ctx, getState());
  enterRule(_localctx, 8, FunMarParser::RuleFunMarRule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    sbwordi();
    setState(50);
    match(FunMarParser::T__3);
    setState(51);
    sbwordo();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TerminalRuleContext ------------------------------------------------------------------

FunMarParser::TerminalRuleContext::TerminalRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FunMarParser::SbwordiContext* FunMarParser::TerminalRuleContext::sbwordi() {
  return getRuleContext<FunMarParser::SbwordiContext>(0);
}

FunMarParser::SbwordoContext* FunMarParser::TerminalRuleContext::sbwordo() {
  return getRuleContext<FunMarParser::SbwordoContext>(0);
}


size_t FunMarParser::TerminalRuleContext::getRuleIndex() const {
  return FunMarParser::RuleTerminalRule;
}


std::any FunMarParser::TerminalRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitTerminalRule(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::TerminalRuleContext* FunMarParser::terminalRule() {
  TerminalRuleContext *_localctx = _tracker.createInstance<TerminalRuleContext>(_ctx, getState());
  enterRule(_localctx, 10, FunMarParser::RuleTerminalRule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    sbwordi();
    setState(54);
    match(FunMarParser::T__4);
    setState(55);
    sbwordo();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SchmContext ------------------------------------------------------------------

FunMarParser::SchmContext::SchmContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FunMarParser::ExpStmtContext *> FunMarParser::SchmContext::expStmt() {
  return getRuleContexts<FunMarParser::ExpStmtContext>();
}

FunMarParser::ExpStmtContext* FunMarParser::SchmContext::expStmt(size_t i) {
  return getRuleContext<FunMarParser::ExpStmtContext>(i);
}


size_t FunMarParser::SchmContext::getRuleIndex() const {
  return FunMarParser::RuleSchm;
}


std::any FunMarParser::SchmContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitSchm(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::SchmContext* FunMarParser::schm() {
  SchmContext *_localctx = _tracker.createInstance<SchmContext>(_ctx, getState());
  enterRule(_localctx, 12, FunMarParser::RuleSchm);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(FunMarParser::T__5);
    setState(58);
    match(FunMarParser::T__0);
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1648) != 0)) {
      setState(59);
      expStmt();
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(65);
    match(FunMarParser::T__1);
    setState(66);
    match(FunMarParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SbwordiContext ------------------------------------------------------------------

FunMarParser::SbwordiContext::SbwordiContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FunMarParser::SbwordiContext::LET() {
  return getTokens(FunMarParser::LET);
}

tree::TerminalNode* FunMarParser::SbwordiContext::LET(size_t i) {
  return getToken(FunMarParser::LET, i);
}

std::vector<tree::TerminalNode *> FunMarParser::SbwordiContext::ID() {
  return getTokens(FunMarParser::ID);
}

tree::TerminalNode* FunMarParser::SbwordiContext::ID(size_t i) {
  return getToken(FunMarParser::ID, i);
}


size_t FunMarParser::SbwordiContext::getRuleIndex() const {
  return FunMarParser::RuleSbwordi;
}


std::any FunMarParser::SbwordiContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitSbwordi(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::SbwordiContext* FunMarParser::sbwordi() {
  SbwordiContext *_localctx = _tracker.createInstance<SbwordiContext>(_ctx, getState());
  enterRule(_localctx, 14, FunMarParser::RuleSbwordi);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FunMarParser::LET) {
      setState(68);
      match(FunMarParser::LET);
    }
    setState(75);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        match(FunMarParser::ID);
        setState(72);
        match(FunMarParser::LET); 
      }
      setState(77);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FunMarParser::ID) {
      setState(78);
      match(FunMarParser::ID);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SbwordoContext ------------------------------------------------------------------

FunMarParser::SbwordoContext::SbwordoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FunMarParser::FuncAbstContext *> FunMarParser::SbwordoContext::funcAbst() {
  return getRuleContexts<FunMarParser::FuncAbstContext>();
}

FunMarParser::FuncAbstContext* FunMarParser::SbwordoContext::funcAbst(size_t i) {
  return getRuleContext<FunMarParser::FuncAbstContext>(i);
}


size_t FunMarParser::SbwordoContext::getRuleIndex() const {
  return FunMarParser::RuleSbwordo;
}


std::any FunMarParser::SbwordoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitSbwordo(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::SbwordoContext* FunMarParser::sbwordo() {
  SbwordoContext *_localctx = _tracker.createInstance<SbwordoContext>(_ctx, getState());
  enterRule(_localctx, 16, FunMarParser::RuleSbwordo);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(81);
      funcAbst();
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FunMarParser::LET

    || _la == FunMarParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AbstContext ------------------------------------------------------------------

FunMarParser::AbstContext::AbstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FunMarParser::AbstContext::LET() {
  return getToken(FunMarParser::LET, 0);
}

tree::TerminalNode* FunMarParser::AbstContext::ID() {
  return getToken(FunMarParser::ID, 0);
}


size_t FunMarParser::AbstContext::getRuleIndex() const {
  return FunMarParser::RuleAbst;
}


std::any FunMarParser::AbstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitAbst(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::AbstContext* FunMarParser::abst() {
  AbstContext *_localctx = _tracker.createInstance<AbstContext>(_ctx, getState());
  enterRule(_localctx, 18, FunMarParser::RuleAbst);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _la = _input->LA(1);
    if (!(_la == FunMarParser::LET

    || _la == FunMarParser::ID)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncAbstContext ------------------------------------------------------------------

FunMarParser::FuncAbstContext::FuncAbstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FunMarParser::FuncAbstContext::LET() {
  return getToken(FunMarParser::LET, 0);
}

tree::TerminalNode* FunMarParser::FuncAbstContext::ID() {
  return getToken(FunMarParser::ID, 0);
}

std::vector<FunMarParser::AbstContext *> FunMarParser::FuncAbstContext::abst() {
  return getRuleContexts<FunMarParser::AbstContext>();
}

FunMarParser::AbstContext* FunMarParser::FuncAbstContext::abst(size_t i) {
  return getRuleContext<FunMarParser::AbstContext>(i);
}


size_t FunMarParser::FuncAbstContext::getRuleIndex() const {
  return FunMarParser::RuleFuncAbst;
}


std::any FunMarParser::FuncAbstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FunMarVisitor*>(visitor))
    return parserVisitor->visitFuncAbst(this);
  else
    return visitor->visitChildren(this);
}

FunMarParser::FuncAbstContext* FunMarParser::funcAbst() {
  FuncAbstContext *_localctx = _tracker.createInstance<FuncAbstContext>(_ctx, getState());
  enterRule(_localctx, 20, FunMarParser::RuleFuncAbst);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      match(FunMarParser::LET);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      match(FunMarParser::ID);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(90);
      match(FunMarParser::ID);
      setState(91);
      match(FunMarParser::T__6);
      setState(93); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(92);
        abst();
        setState(95); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == FunMarParser::LET

      || _la == FunMarParser::ID);
      setState(97);
      match(FunMarParser::T__7);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void FunMarParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  funmarParserInitialize();
#else
  ::antlr4::internal::call_once(funmarParserOnceFlag, funmarParserInitialize);
#endif
}
